syntax = "proto3";

package scala.meta.internal.semantic.v1.proto;

// scala.meta.semantic.v1.Database
message Database {
  // a database is treated as a sequence of database files to accommodate
  // - incremental compilation, a database file maps one-to-one with a compilation unit.
  // - simple merging of two databases, the bytes of two semanticdbs can in
  //   essence be concatenated.
  repeated DatabaseFile files = 1;
}

message DatabaseFile {
  reserved 1;
  string path = 5;
  repeated ResolvedName names = 2;
  repeated Message messages = 3;
  repeated SymbolDenotation denotations = 4;
}

message ResolvedName {
  Range range = 1;
  string symbol = 2;
}

message Range {
  int32 start = 2;
  int32 end = 3;
}

message Message {
  enum Severity {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;
  }
  Range range = 1;
  Severity severity = 2;
  string msg = 3;
}

message SymbolDenotation {
  string symbol = 1;
  Denotation denot = 2;
}

message Denotation {
  int64 flags = 1;
}